Fix GitHub Actions workflows - use standard Ubuntu Emacs package
The ubuntu-elisp PPA doesn't support Ubuntu 24.04 (noble) yet, causing
workflow failures. Switch to using the standard emacs package from
Ubuntu repositories which is sufficient for our needs.

This fixes the 'repository does not have a Release file' error.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,9 +15,8 @@ jobs:
 
       - name: Install Emacs
         run: |
-          sudo apt-add-repository ppa:ubuntu-elisp/ppa -y
           sudo apt update
-          sudo apt-get install emacs-snapshot -y
+          sudo apt-get install -y emacs
 
       - name: Check Org files syntax
         run: |
@@ -78,9 +77,8 @@ jobs:
 
       - name: Install Emacs
         run: |
-          sudo apt-add-repository ppa:ubuntu-elisp/ppa -y
           sudo apt update
-          sudo apt-get install emacs-snapshot -y
+          sudo apt-get install -y emacs
 
       - name: Test build
         run: |
