--- a/.github/workflows/pr-preview.yml
+++ b/.github/workflows/pr-preview.yml
@@ -42,9 +42,8 @@ jobs:
 
       - name: Install Emacs
         run: |
-          sudo apt-add-repository ppa:ubuntu-elisp/ppa -y
           sudo apt update
-          sudo apt-get install emacs-snapshot -y
+          sudo apt-get install -y emacs
 
       - name: Build the site
         run: |
