Fix build script for GitHub Actions environment
- Use GITHUB_WORKSPACE environment variable to find correct directory
- Fall back to ~/blog for local development
- Add debug output to diagnose build issues
- Add error checking for public directory creation
- Pass GITHUB_WORKSPACE to all workflow build steps

This should fix the 'public: Cannot open: No such file or directory' error
in GitHub Actions.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -86,6 +86,7 @@ jobs:
           ./build.sh
         env:
           CI: true
+          GITHUB_WORKSPACE: ${{ github.workspace }}
 
       - name: Validate HTML output
         run: |
