--- a/.github/workflows/pr-preview.yml
+++ b/.github/workflows/pr-preview.yml
@@ -51,6 +51,7 @@ jobs:
           ./build.sh
         env:
           CI: true
+          GITHUB_WORKSPACE: ${{ github.workspace }}
 
       - name: Generate sitemap
         run: |
