Fix grep pattern in CI metadata validation
The grep pattern was using escaped plus sign (\\+) which doesn't work
correctly in the GitHub Actions environment. Changed to literal #+
for checking Org-mode metadata headers.

This fixes the 'Missing TITLE' false positive error.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,15 +35,15 @@ jobs:
             if [ -f "$file" ] && [[ "$file" != "posts/index.org" ]] && [[ "$file" != "posts/about.org" ]] && [[ "$file" != "posts/404.org" ]]; then
               echo "Checking: $file"
               # Check for required metadata
-              if ! grep -q "^#\\+TITLE:" "$file"; then
+              if ! grep -q "^#+TITLE:" "$file"; then
                 echo "❌ Missing TITLE in $file"
                 exit 1
               fi
-              if ! grep -q "^#\\+AUTHOR:" "$file"; then
+              if ! grep -q "^#+AUTHOR:" "$file"; then
                 echo "❌ Missing AUTHOR in $file"
                 exit 1
               fi
-              if ! grep -q "^#\\+DATE:" "$file"; then
+              if ! grep -q "^#+DATE:" "$file"; then
                 echo "❌ Missing DATE in $file"
                 exit 1
               fi
