--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "serve": "cd public && python3 -m http.server",
     "minify:js": "terser static/js/blog.js -o static/js/blog.min.js -c -m",
     "minify:css": "postcss static/css/blog.css -o static/css/blog.min.css --use cssnano",
-    "minify": "npm run minify:js && npm run minify:css"
+    "minify": "npm run minify:js && npm run minify:css",
+    "format": "prettier --write \"**/*.{js,css,json,md,yml,yaml}\" \"!public/**\" \"!*.min.*\"",
+    "format:check": "prettier --check \"**/*.{js,css,json,md,yml,yaml}\" \"!public/**\" \"!*.min.*\""
   },
   "devDependencies": {
     "cssnano": "^6.0.1",
     "postcss": "^8.4.31",
     "postcss-cli": "^10.1.0",
+    "prettier": "^3.6.2",
+    "prettier-plugin-sh": "^0.18.0",
     "terser": "^5.24.0"
   },
   "engines": {
